tests/cases/ok/types.p4
def echo_bool(flag: bool) -> bool:
    return flag

def first_letter() -> char:
    return 'A'

def greet(name: str) -> str:
    return name

def main() -> None:
    print(echo_bool(True))
    print(first_letter())
    print(greet("hello"))
