tests/cases/fail/chr_arg_type.p4
def main() -> None:
    print(chr('A'))
